--- a/newGuo/contact.html
+++ b/newGuo/contact.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>下单付款</title>
+    <title>联系我们</title>
     <meta name="viewport" charset="utf-8" content="width=1024">
-    <meta name="keywords" content="下单付款">
-    <meta name="description" content="下单付款">
+    <meta name="keywords" content="联系我们">
+    <meta name="description" content="联系国馆">
     <link href="global/styles/base.css" type="text/css" rel="stylesheet">
     <link href="global/styles/layout.css" type="text/css" rel="stylesheet">
     <link href="cart/styles/cart.css" type="text/css" rel="stylesheet">
@@ -115,64 +115,137 @@
 
 <!--content-->
 <div class="container">
-    <div class="my-cart">
-        <h1>您的订单已生成，最后一步，付款</h1>
-        <div style="border-bottom: 1px solid #ccc;"></div>
-        <div class="pay-detail">
-            <div class="order-number">
-                订单：2014978239479
-            </div>
-            <div class="order-money">
-                <p>
-                    金额：234234元
-                </p>
-                <p>
-                    货品：国馆中国道 *1
-                </p>
-            </div>
-            <div class="order-money">
-                <p>
-                    配送：毛义明  /  18668199311  /  广东省，广州市，天河区，华明路 13号，华普广场东塔702 （510000）
-                </p>
-            </div>
-        </div>
-
-        <!--支付方式选择-->
-        <h1 style="margin-top: 50px;">选择支付方式</h1>
-        <div style="border-bottom: 1px solid #f8f8f8;"></div>
-        <div class="pay-method">
-            <div class="pay-method-detail">
-                <p>
-                    <span>支付平台</span><br>
-                    如遇支付限额限制，请提高相关支付额度。
-                </p>
-            </div>
-            <div class="pay-methos-aliy">
-                <input type="radio" checked style="vertical-align: middle">
-                <img src="global/images/payOnline_zfb.gif">
-            </div>
-            <div class="pay-methos-aliy">
-                <input type="radio" checked style="vertical-align: middle">
-                <img src="global/images/cft.gif">
-            </div>
-        </div>
-
-        <!--配送方式-->
-        <h1 style="margin-top: 50px;">配送方式</h1>
-        <div style="border-bottom: 1px solid #f8f8f8;"></div>
-            <p style="margin-left: 15px;">
-                国馆酒类产品采用顺丰物流（部分偏远地区采用EMS），包邮。
-            </p>
-
-        <!--支付页面底部-->
-        <ul class="table-content" style="margin-bottom: 30px; height: 135px;">
-            <li class="clear" style="width: 255px; text-align: right;float: right">
-                <a href="pay-success.html" class="btn btn-red" style="float: right; width: 100px; margin-top:50px;">下一步</a>
-                <a href="#" class="btn btn-valite" style=" margin-top:50px; float: right;height: 40px;line-height: 40px;margin-right: 10px;">修改订单</a>
+    <div class="left-nav">
+        <ul>
+            <li>
+                <a href="#">
+                了解我们
+                </a>
             </li>
-
+            <li>
+                <a href="#" class="nav-selected">
+                联系我们
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                加入我们
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                媒体新闻
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                团队故事
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                相册视频
+                </a>
+            </li>
         </ul>
-        <!--支付页面底部-->
+    </div>
+    <div class="my-cart">
+        <h1>联系我们</h1>
+        <div style="border-bottom: 1px solid #ccc;"></div>
+        <div>
+            <img src="about/images/address.jpg" style="width: 100%; margin-top: 20px;">
+        </div>
+        <div class="order-money">
+            <p>
+                公司地址：广东省，广州市，天河区，珠江新城花城大道13号建滔广场6楼&nbsp;整层
+            </p>
+            <p>
+                前台电话：020-85289600
+            </p>
+        </div>
+
+        <div style="border-bottom: 1px solid #f8f8f8; margin-top: 50px;"></div>
+        <div class="contact-bottom">
+            <ul>
+                <li>线上合作</li>
+                <li style="font-size: 12px; margin-bottom: 10px;">
+                    <a href="#">媒体</a>/
+                    <a href="#">商务</a>/
+                    <a href="#">品牌</a>/
+                    <a href="#">联合营销</a>
+                </li>
+                <li>
+                    联系人：毛义明
+                </li>
+                <li>
+                    电话：18668199311
+                </li>
+                <li>
+                    总机：020-85289600
+                </li>
+                <li>
+                    微信：alaxmaohz
+                </li>
+            </ul>
+            <ul>
+                <li>线下合作</li>
+                <li style="font-size: 12px; margin-bottom: 10px;">
+                    <a href="#">渠道</a>/
+                    <a href="#">活动</a>
+                </li>
+                <li>
+                    联系人：姚晓群
+                </li>
+                <li>
+                    电话：13924122464
+                </li>
+                <li>
+                    总机：020-85289600
+                </li>
+                <li>
+                    微信：yaoqun2464
+                </li>
+            </ul>
+            <ul>
+                <li>售后客服</li>
+                <li style="font-size: 12px; margin-bottom: 10px;">
+                    <a href="#">维权</a>/
+                    <a href="#">咨询</a>/
+                    <a href="#">退货</a>
+                </li>
+                <li>
+                    电话：400-900-5000
+                </li>
+                <li>
+                    微信公众号：国馆酒
+                </li>
+                <li>
+                    邮箱：kefu@guoguan.com
+                </li>
+            </ul>
+            <div style="clear: both"></div>
+            <ul >
+                <li>加入国馆</li>
+                <li style="font-size: 12px; margin-bottom: 10px;">
+                    <a href="#">投递简历</a>/
+                    <a href="#">职位咨询</a>
+                </li>
+                <li>
+                    邮箱：hr@guoguan.com
+                </li>
+            </ul>
+            <ul>
+                <li>意见反馈</li>
+                <li style="font-size: 12px; margin-bottom: 10px;">
+                    <a href="#">投诉</a>/
+                    <a href="#">建议</a>
+                </li>
+                <li>
+                    邮箱：zixun@guoguan.com
+                </li>
+            </ul>
+        </div>
+
     </div>
 </div>
 <!--content end-->
