--- a/newGuo/index.html
+++ b/newGuo/index.html
@@ -34,7 +34,7 @@
             <div class="nav-main">
                 <ul class="nav-main-list clearfix" id="idmenu">
                     <li class="nav-main-item">
-                        <a href="#">
+                        <a href="#" class="nav-selected">
                             首页
                         </a>
                     </li>
@@ -44,12 +44,12 @@
                         </a>
                     </li>
                     <li class="nav-main-item">
-                        <a href="#">
+                        <a href="super-wine.html">
                             顶级酒品
                         </a>
                     </li>
                     <li class="nav-main-item">
-                        <a href="#">
+                        <a href="band-story.html">
                             品牌故事
                         </a>
                     </li>
