--- a/learn/index.html
+++ b/learn/index.html
@@ -22,5 +22,10 @@
         <button class="card"></button>
     </div>
 </div>
+
+<script src="js/app.js" type="text/javascript"></script>
+<script>
+    app.init();
+</script>
 </body>
 </html>
