--- a/newGuo/forget-password-4.html
+++ b/newGuo/forget-password-4.html
@@ -124,14 +124,13 @@
         </ul>
     </div>
 
-    <div class="login-form-find" style="margin-bottom: 100px;">
+    <div class="login-form-find" style="margin-bottom: 15px;">
         <div style="width: 230px; margin: 0 auto; text-align: center; font-size: 20px;">
            密码设置成功！
         </div>
-        <div class="login-input-area">
-            <a href="forget-password-4.html" class="btn btn-red" style="height: 50px;line-height: 50px;width: 100%;">下一步</a>
-        </div>
-
+    </div>
+    <div style="width: 500px; margin: 0 auto 100px auto; text-align: center">
+        页面将在3秒钟后自动跳回登录页。如系统未自动跳转，请点击<a href="login.html" style="text-decoration: underline; color: #ff9900">登录</a>
     </div>
 </div>
 <!--content end-->
