--- a/newGuo/pay-method.html
+++ b/newGuo/pay-method.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>购物车</title>
+    <title>支付方式</title>
     <meta name="viewport" charset="utf-8" content="width=1024">
-    <meta name="keywords" content="购物车">
-    <meta name="description" content="购物车">
+    <meta name="keywords" content="支付方式">
+    <meta name="description" content="支付方式">
     <link href="global/styles/base.css" type="text/css" rel="stylesheet">
     <link href="global/styles/layout.css" type="text/css" rel="stylesheet">
     <link href="cart/styles/cart.css" type="text/css" rel="stylesheet">
@@ -115,137 +115,33 @@
 
 <!--content-->
 <div class="container">
-    <!--购物车为空时显示-->
-    <div class="cart-empty"  style="display: none">
-        <div class="cart-empty-left">
-            <h1>你的购物车还是空的赶紧行动吧！</h1>
-            <a href="#" class="btn btn-red" style="margin-top: 35px">
-                马上去购物
-            </a>
+    <div class="my-cart">
+        <h1>支付方式</h1>
+        <div style="border-bottom: 1px solid #ccc;"></div>
+        <p style="margin-top: 20px;">
+            国馆提供支付宝、财付通等第三方平台支付。暂时不支持货到付款，请馆友购买时留意，避免影响正常购买。
+        </p>
+        <p>
+            支付宝在线支付支持账户支付和二维码支付两种方式。通过支付宝网银支付或快捷支付还可以直接使用银行账户付款。因银行卡在线支付有额度限制，如在支付中遇到问题请联系支付宝和开卡行客服。
+        </p>
 
-        </div>
-        <div class="cart-empty-right">
-
-        </div>
-        <div style="clear: both"></div>
+        <p>
+            <img src="global/images/0001.jpg" style="width: 550px;">
+        </p>
+        <p style="margin-top: 30px;">
+            <span>可使用网银支付的合作银行：</span><br>
+            <img src="global/images/0002.jpg" style="width: 550px;">
+        </p>
+        <p style="margin-top: 30px;">
+            <span>可使用快捷支付的合作银行：</span><br>
+            <img src="global/images/0003.jpg" style="width: 550px;">
+            <img src="global/images/0004.jpg" style="width: 550px;">
+        </p>
     </div>
 
-
-   <div class="my-cart">
-       <h1>我的购物车</h1>
-       <!--购物车标题-->
-       <ul class="table-name">
-           <li style="width: 43%;text-align: left;margin-left: 55px;">名称</li>
-           <li style="width: 10%">单价</li>
-           <li style="width: 19%">数量</li>
-           <li style="width: 10%">小计</li>
-           <li style="width: 10%">操作</li>
-       </ul>
-       <!--购物车标题-->
-
-       <!--购物车内容-->
-       <ul class="table-content">
-           <li class="clear" style="width: 48%; text-align: left">
-               <a href="#" class="pic">
-                   <img src="images/5_01.jpg">
-               </a>
-               <a class="name">
-                   国馆·中国道
-                   <br>
-                   <span>
-                       首款收藏级文化白酒<br>
-                       一套两支卷轴，共四瓶，每瓶500ml
-                   </span>
-               </a>
-           </li>
-           <li style="width: 10%; height: 150px; line-height: 150px;">
-                2399元
-           </li>
-           <li style="width: 19%;">
-               <div class="cart-number-oprate">
-                   <div class="number-minus">
-                       <a href="#" style="color: #333;display: block">
-                           -
-                       </a>
-                   </div>
-                   <div class="number-middle">
-                       99
-                   </div>
-                   <div class="number-plus">
-                       <a href="#" style="color: #333;display: block">
-                           +
-                       </a>
-                   </div>
-               </div>
-           </li>
-           <li style="width: 10%; height: 150px; line-height: 150px; color: #ff9900">2399元</li>
-           <li style="width: 10%; margin-top:66px;*+margin-top: 70px;">
-               <a href="#" >
-                   <i class="icon-remove"></i>
-               </a>
-           </li>
-       </ul>
-       <ul class="table-content">
-           <li class="clear" style="width: 48%; text-align: left">
-               <a href="#" class="pic">
-                   <img src="images/5_01.jpg">
-               </a>
-               <a class="name">
-                   国馆·中国道
-                   <br>
-                   <span>
-                       首款收藏级文化白酒<br>
-                       一套两支卷轴，共四瓶，每瓶500ml
-                   </span>
-               </a>
-           </li>
-           <li style="width: 10%; height: 150px; line-height: 150px;">
-               2399元
-           </li>
-           <li style="width: 19%;">
-               <div class="cart-number-oprate">
-                   <div class="number-minus">
-                       <a href="#" style="color: #333;display: block">
-                           -
-                       </a>
-                   </div>
-                   <div class="number-middle">
-                       99
-                   </div>
-                   <div class="number-plus">
-                       <a href="#" style="color: #333;display: block">
-                           +
-                       </a>
-                   </div>
-               </div>
-           </li>
-           <li style="width: 10%; height: 150px; line-height: 150px; color: #ff9900">2399元</li>
-           <li style="width: 10%; margin-top:66px;*+margin-top: 70px;">
-               <a href="#" >
-                   <i class="icon-remove"></i>
-               </a>
-           </li>
-       </ul>
-       <!--购物车内容-->
-
-       <!--购物车底部-->
-       <ul class="table-content" style="margin-bottom: 30px;">
-           <li class="clear" style="width: 255px; text-align: right;float: right">
-               <div class="cart-total">
-                   <div class="cart-total-one">总计：</div>
-                   <div class="cart-total-two">20000<span style="font-size: 16px;">元</span></div>
-               </div>
-               <div class="clear"></div>
-
-               <a href="address.html" class="btn btn-red" style="float: right; width: 110px; margin-top:50px;">去结账</a>
-           </li>
-
-       </ul>
-       <!--购物车底部-->
-
-   </div>
 </div>
 <!--content end-->
+
 
 <!--footer-->
 <div class="site-footer mt0">
