--- a/newGuo/deliver-method.html
+++ b/newGuo/deliver-method.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>购物车</title>
+    <title>配送方式</title>
     <meta name="viewport" charset="utf-8" content="width=1024">
-    <meta name="keywords" content="购物车">
-    <meta name="description" content="购物车">
+    <meta name="keywords" content="配送方式">
+    <meta name="description" content="配送方式">
     <link href="global/styles/base.css" type="text/css" rel="stylesheet">
     <link href="global/styles/layout.css" type="text/css" rel="stylesheet">
     <link href="cart/styles/cart.css" type="text/css" rel="stylesheet">
@@ -115,137 +115,35 @@
 
 <!--content-->
 <div class="container">
-    <!--购物车为空时显示-->
-    <div class="cart-empty"  style="display: none">
-        <div class="cart-empty-left">
-            <h1>你的购物车还是空的赶紧行动吧！</h1>
-            <a href="#" class="btn btn-red" style="margin-top: 35px">
-                马上去购物
-            </a>
-
-        </div>
-        <div class="cart-empty-right">
-
-        </div>
-        <div style="clear: both"></div>
+    <div class="my-cart">
+        <h1>配送方式</h1>
+        <div style="border-bottom: 1px solid #ccc;"></div>
+        <span>国馆酒类产品采用顺丰物流（部分偏远地区采用EMS），包邮。 </span>
+        <p style="margin-top: 20px;">
+            配送范围：
+            中国大陆地区，暂不支持香港、澳门及台湾地区。
+        </p>
+        <p>
+            发货时间：
+            通常在订单支付成功后1个工作日内发货。从发货日算起，顺丰快递需要1-6个工作日将“国馆•中国道”送达用户手中。
+        </p>
+        <p>
+            用户可以在我的订单里查询订单状态。
+            实际发货时还将向收件人手机号发送一条已发货短信提醒，内容为：“尊敬的用户，您好！您订购的「国馆•中国道」已由顺丰快递发出，单号1234567890123。因白酒属易碎品，请您务必先验货再签收，如有破碎或溢出，请拒绝签收并联系国馆售后热线4009005000。感谢您的支持！”
+            用户可以登录顺丰快递公司网站：www.sf-express.com/cn/sc/
+            输入相应单号，即可查询货物配送状态。
+        </p>
+        <p style="margin-bottom: 100px;">
+            温馨提示：<br>
+                    1、	签收前，请第一时间仔细检查外包装是否完整，封签处是否未拆封，商品数量是否与订单相符；在签收后别忘了请快递员在场共同检验包装内物品是否完好。<br>
+                    2、	如果不能亲自签收，请记得要拜托他人签收也务必严格按照第一项内容操作。<br>
+                    3、	商品在签收后发现问题，例如：酒瓶有破损，漏液。不要担心，只需要及时联系客服，我们将竭诚为您服务。
+        </p>
     </div>
 
-
-   <div class="my-cart">
-       <h1>我的购物车</h1>
-       <!--购物车标题-->
-       <ul class="table-name">
-           <li style="width: 43%;text-align: left;margin-left: 55px;">名称</li>
-           <li style="width: 10%">单价</li>
-           <li style="width: 19%">数量</li>
-           <li style="width: 10%">小计</li>
-           <li style="width: 10%">操作</li>
-       </ul>
-       <!--购物车标题-->
-
-       <!--购物车内容-->
-       <ul class="table-content">
-           <li class="clear" style="width: 48%; text-align: left">
-               <a href="#" class="pic">
-                   <img src="images/5_01.jpg">
-               </a>
-               <a class="name">
-                   国馆·中国道
-                   <br>
-                   <span>
-                       首款收藏级文化白酒<br>
-                       一套两支卷轴，共四瓶，每瓶500ml
-                   </span>
-               </a>
-           </li>
-           <li style="width: 10%; height: 150px; line-height: 150px;">
-                2399元
-           </li>
-           <li style="width: 19%;">
-               <div class="cart-number-oprate">
-                   <div class="number-minus">
-                       <a href="#" style="color: #333;display: block">
-                           -
-                       </a>
-                   </div>
-                   <div class="number-middle">
-                       99
-                   </div>
-                   <div class="number-plus">
-                       <a href="#" style="color: #333;display: block">
-                           +
-                       </a>
-                   </div>
-               </div>
-           </li>
-           <li style="width: 10%; height: 150px; line-height: 150px; color: #ff9900">2399元</li>
-           <li style="width: 10%; margin-top:66px;*+margin-top: 70px;">
-               <a href="#" >
-                   <i class="icon-remove"></i>
-               </a>
-           </li>
-       </ul>
-       <ul class="table-content">
-           <li class="clear" style="width: 48%; text-align: left">
-               <a href="#" class="pic">
-                   <img src="images/5_01.jpg">
-               </a>
-               <a class="name">
-                   国馆·中国道
-                   <br>
-                   <span>
-                       首款收藏级文化白酒<br>
-                       一套两支卷轴，共四瓶，每瓶500ml
-                   </span>
-               </a>
-           </li>
-           <li style="width: 10%; height: 150px; line-height: 150px;">
-               2399元
-           </li>
-           <li style="width: 19%;">
-               <div class="cart-number-oprate">
-                   <div class="number-minus">
-                       <a href="#" style="color: #333;display: block">
-                           -
-                       </a>
-                   </div>
-                   <div class="number-middle">
-                       99
-                   </div>
-                   <div class="number-plus">
-                       <a href="#" style="color: #333;display: block">
-                           +
-                       </a>
-                   </div>
-               </div>
-           </li>
-           <li style="width: 10%; height: 150px; line-height: 150px; color: #ff9900">2399元</li>
-           <li style="width: 10%; margin-top:66px;*+margin-top: 70px;">
-               <a href="#" >
-                   <i class="icon-remove"></i>
-               </a>
-           </li>
-       </ul>
-       <!--购物车内容-->
-
-       <!--购物车底部-->
-       <ul class="table-content" style="margin-bottom: 30px;">
-           <li class="clear" style="width: 255px; text-align: right;float: right">
-               <div class="cart-total">
-                   <div class="cart-total-one">总计：</div>
-                   <div class="cart-total-two">20000<span style="font-size: 16px;">元</span></div>
-               </div>
-               <div class="clear"></div>
-
-               <a href="address.html" class="btn btn-red" style="float: right; width: 110px; margin-top:50px;">去结账</a>
-           </li>
-
-       </ul>
-       <!--购物车底部-->
-
-   </div>
 </div>
 <!--content end-->
+
 
 <!--footer-->
 <div class="site-footer mt0">
