--- a/newGuo/enterprise-order.html
+++ b/newGuo/enterprise-order.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>购物车</title>
+    <title>企业团购</title>
     <meta name="viewport" charset="utf-8" content="width=1024">
-    <meta name="keywords" content="购物车">
-    <meta name="description" content="购物车">
+    <meta name="keywords" content="企业团购">
+    <meta name="description" content="企业团购">
     <link href="global/styles/base.css" type="text/css" rel="stylesheet">
     <link href="global/styles/layout.css" type="text/css" rel="stylesheet">
     <link href="cart/styles/cart.css" type="text/css" rel="stylesheet">
@@ -115,137 +115,29 @@
 
 <!--content-->
 <div class="container">
-    <!--购物车为空时显示-->
-    <div class="cart-empty"  style="display: none">
-        <div class="cart-empty-left">
-            <h1>你的购物车还是空的赶紧行动吧！</h1>
-            <a href="#" class="btn btn-red" style="margin-top: 35px">
-                马上去购物
-            </a>
-
+    <div class="my-cart">
+        <h1>企业团购</h1>
+        <div style="border-bottom: 1px solid #ccc;"></div>
+        <p style="margin-top: 30px;">为方便企业客户集团采购，国馆特开通企业团购绿色通道。专人负责企业大客户大批量采购需求，全程提供优质服务。
+        </p>
+        <div class="contact-bottom">
+            <ul class="person-order-ul" style="margin-bottom: 200px;">
+                <li style="font-size: 14px;">
+                    联系人：姚先生
+                </li>
+                <li>
+                    手机号码：13924122464
+                </li>
+                <li>
+                    固话：020-85289600-818
+                </li>
+            </ul>
         </div>
-        <div class="cart-empty-right">
-
-        </div>
-        <div style="clear: both"></div>
     </div>
 
-
-   <div class="my-cart">
-       <h1>我的购物车</h1>
-       <!--购物车标题-->
-       <ul class="table-name">
-           <li style="width: 43%;text-align: left;margin-left: 55px;">名称</li>
-           <li style="width: 10%">单价</li>
-           <li style="width: 19%">数量</li>
-           <li style="width: 10%">小计</li>
-           <li style="width: 10%">操作</li>
-       </ul>
-       <!--购物车标题-->
-
-       <!--购物车内容-->
-       <ul class="table-content">
-           <li class="clear" style="width: 48%; text-align: left">
-               <a href="#" class="pic">
-                   <img src="images/5_01.jpg">
-               </a>
-               <a class="name">
-                   国馆·中国道
-                   <br>
-                   <span>
-                       首款收藏级文化白酒<br>
-                       一套两支卷轴，共四瓶，每瓶500ml
-                   </span>
-               </a>
-           </li>
-           <li style="width: 10%; height: 150px; line-height: 150px;">
-                2399元
-           </li>
-           <li style="width: 19%;">
-               <div class="cart-number-oprate">
-                   <div class="number-minus">
-                       <a href="#" style="color: #333;display: block">
-                           -
-                       </a>
-                   </div>
-                   <div class="number-middle">
-                       99
-                   </div>
-                   <div class="number-plus">
-                       <a href="#" style="color: #333;display: block">
-                           +
-                       </a>
-                   </div>
-               </div>
-           </li>
-           <li style="width: 10%; height: 150px; line-height: 150px; color: #ff9900">2399元</li>
-           <li style="width: 10%; margin-top:66px;*+margin-top: 70px;">
-               <a href="#" >
-                   <i class="icon-remove"></i>
-               </a>
-           </li>
-       </ul>
-       <ul class="table-content">
-           <li class="clear" style="width: 48%; text-align: left">
-               <a href="#" class="pic">
-                   <img src="images/5_01.jpg">
-               </a>
-               <a class="name">
-                   国馆·中国道
-                   <br>
-                   <span>
-                       首款收藏级文化白酒<br>
-                       一套两支卷轴，共四瓶，每瓶500ml
-                   </span>
-               </a>
-           </li>
-           <li style="width: 10%; height: 150px; line-height: 150px;">
-               2399元
-           </li>
-           <li style="width: 19%;">
-               <div class="cart-number-oprate">
-                   <div class="number-minus">
-                       <a href="#" style="color: #333;display: block">
-                           -
-                       </a>
-                   </div>
-                   <div class="number-middle">
-                       99
-                   </div>
-                   <div class="number-plus">
-                       <a href="#" style="color: #333;display: block">
-                           +
-                       </a>
-                   </div>
-               </div>
-           </li>
-           <li style="width: 10%; height: 150px; line-height: 150px; color: #ff9900">2399元</li>
-           <li style="width: 10%; margin-top:66px;*+margin-top: 70px;">
-               <a href="#" >
-                   <i class="icon-remove"></i>
-               </a>
-           </li>
-       </ul>
-       <!--购物车内容-->
-
-       <!--购物车底部-->
-       <ul class="table-content" style="margin-bottom: 30px;">
-           <li class="clear" style="width: 255px; text-align: right;float: right">
-               <div class="cart-total">
-                   <div class="cart-total-one">总计：</div>
-                   <div class="cart-total-two">20000<span style="font-size: 16px;">元</span></div>
-               </div>
-               <div class="clear"></div>
-
-               <a href="address.html" class="btn btn-red" style="float: right; width: 110px; margin-top:50px;">去结账</a>
-           </li>
-
-       </ul>
-       <!--购物车底部-->
-
-   </div>
 </div>
 <!--content end-->
+
 
 <!--footer-->
 <div class="site-footer mt0">
