--- a/newGuo/address.html
+++ b/newGuo/address.html
@@ -121,7 +121,7 @@
         <div class="address-list">
            <div>
                <!--地址列表-->
-               <div class="selected">
+               <div class="selected address-square">
                     <div class="address-user-name">
                         毛义明
                         <div class="edit-icon">
@@ -143,51 +143,17 @@
                        华明路 13号，华普广场东塔702 （510000）
                    </div>
                </div>
-               <div >
+               <div class=" address-square">
                    <div class="address-user-name">
                        毛义明
-                   </div>
-                   <div style="margin-top: 10px">
-                       18503014026
-                   </div>
-                   <div >
-                       广东省广州市天河区
-                   </div>
-                   <div >
-                       华明路 13号，华普广场东塔702 （510000）
-                   </div>
-               </div>
-               <div >
-                   <div class="address-user-name">
-                       毛义明
-                   </div>
-                   <div style="margin-top: 10px">
-                       18503014026
-                   </div>
-                   <div >
-                       广东省广州市天河区
-                   </div>
-                   <div >
-                       华明路 13号，华普广场东塔702 （510000）
-                   </div>
-               </div>
-               <div >
-                   <div class="address-user-name">
-                       毛义明
-                   </div>
-                   <div style="margin-top: 10px">
-                       18503014026
-                   </div>
-                   <div >
-                       广东省广州市天河区
-                   </div>
-                   <div >
-                       华明路 13号，华普广场东塔702 （510000）
-                   </div>
-               </div>
-               <div >
-                   <div class="address-user-name">
-                       毛义明
+                       <div class="edit-icon">
+                           <a href="#">
+                               <i class="icon-edit"></i>
+                           </a>
+                           <a href="#">
+                               <i class="icon-remove" style="margin-top: -4px; *+margin-top:-2px; vertical-align: middle; "></i>
+                           </a>
+                       </div>
                    </div>
                    <div style="margin-top: 10px">
                        18503014026
@@ -201,7 +167,7 @@
                </div>
 
                <!--添加地址-->
-               <div style="text-align: center; cursor: pointer; ">
+               <div style="text-align: center; cursor: pointer; " class="address-square">
                    <a class="address-add" href="address-form.html">
                        <i class="icon-plus" style="color: #ccc; font-size: 20px; margin-top: 50px; display: block"></i>
                        <br>
