--- a/newGuo/index.html
+++ b/newGuo/index.html
@@ -64,9 +64,9 @@
                             <i class="icon-caret-down" style="color: #9c9c9c"></i>
                         </a>
                         <ul>
-                            <li><a href="#" ><img src="images/5_01.jpg" style="width: 30px; height: 30px; vertical-align: middle; margin-right: 10px;"><span>每日一文</span></a></li>
-                            <li><a href="#" ><img src="images/5_02.jpg" style="width: 30px; height: 30px; vertical-align: middle; margin-right: 10px;"><span>国馆电台</span></a></li>
-                            <li><a href="#" ><img src="images/5_03.jpg" style="width: 30px; height: 30px; vertical-align: middle; margin-right: 10px;"><span>国馆说文化</span></a>
+                            <li><a href="#" ><img src="global/images/icon-1.jpg" style="width: 30px; height: 30px; vertical-align: middle; margin-right: 10px;"><span>每日一文</span></a></li>
+                            <li><a href="#" ><img src="global/images/icon-2.jpg" style="width: 30px; height: 30px; vertical-align: middle; margin-right: 10px;"><span>国馆电台</span></a></li>
+                            <li><a href="#" ><img src="global/images/icon-3.jpg" style="width: 30px; height: 30px; vertical-align: middle; margin-right: 10px;"><span>国馆说文化</span></a>
                             </li>
                         </ul>
                     </li>
@@ -118,18 +118,17 @@
     <div id="billboard" data-hires="true">
         <div class="swipe">
             <ul id="slide" style="">
-                <li style='display:block'>
-                    <div class="index-banner-1">
+                <li style='display:block;'>
+                    <div class="index-banner-1" onclick="window.open('http://baidu.com')">
+                    </div>
+                </li>
+                <li style='display:none;'>
+                    <div class="index-banner-2" onclick="window.open('http://baidu.com')">
 
                     </div>
                 </li>
                 <li style='display:none;'>
-                    <div class="index-banner-2">
-
-                    </div>
-                </li>
-                <li style='display:none;'>
-                    <div class="index-banner-3">
+                    <div class="index-banner-3" onclick="window.open('http://baidu.com')">
 
                     </div>
                 </li>
