--- a/newGuo/register.html
+++ b/newGuo/register.html
@@ -146,7 +146,8 @@
                     </div>
                 </div>
                 <div class="login-input-area">
-                    <input type="text" placeholder="&nbsp;新的登录密码" class="input-style width100">
+                    <input type="password" placeholder="&nbsp;新的登录密码" class="input-style width100 password-psw"  style="display: none">
+                    <input type="text" placeholder="&nbsp;新的登录密码" class="input-style width100 password-text">
                     <div class="error-tip-bg">
                         <span>
                         手机号码错误
@@ -326,6 +327,21 @@
             }
         });
     });
+
+    //密码placeholder处理
+    $("input.password-text").focus(function(){
+        console.log(1111)
+        $(this).css("display","none");
+        $("input.password-psw").css("display","block");
+        $("input.password-psw").focus();
+    })
+    $("input.password-psw").focusout(function(){
+        if(!$(this).val()){
+            $(this).css("display","none");
+            $("input.password-text").css("display","block");
+        }
+    });
+
 </script>
 <script>
     $(document).ready(function() {
@@ -339,6 +355,19 @@
             'overlayColor'		: '#fff',
             'scrolling'		    : 'no',
             'type'				: 'iframe'
+        });
+
+        $("input.password-text").focus(function(){
+            console.log(1111)
+            $(this).css("display","none");
+            $("input.password-psw").css("display","block");
+            $("input.password-psw").focus();
+        })
+        $("input.password-psw").focusout(function(){
+            if(!$(this).val()){
+                $(this).css("display","none");
+                $("input.password-text").css("display","block");
+            }
         });
     });
 </script>
