--- a/newGuo/zhongguodao.html
+++ b/newGuo/zhongguodao.html
@@ -39,6 +39,7 @@
     .tab a.active { font-weight: bold; color: #b18247; }
     .panel-container { margin-bottom: -2px; }
     #tabs1-four{background-color: #eee;}
+    #tab-container{margin-top:50px;}
 </style>
 <!--head-->
 <!--head-->
@@ -142,8 +143,8 @@
 <!--head end-->
 <div class="container" style="height: 0; z-index: 1;">
     <div class="header-nav">
-        <div class="purchase-content " style="margin-top: 5px; float: right">
-            <a class="btn btn-red" href="#">立即购买</a>
+        <div class="purchase-content " style="margin-top: 8px; float: right">
+            <a class="btn btn-red" href="#" style="height: 30px; line-height: 30px; width: 110px; font-size: 12px;">立即购买</a>
         </div>
     </div>
 </div>
@@ -154,9 +155,9 @@
 <div id="tab-container" class='tab-container'  style="z-index:1 ; position: static">
     <ul class='etabs'>
         <li class='tab'><a href="#tabs1-one" style="margin-left: 414px;">概述</a></li>
-        <li class='tab'><a href="#tabs1-two">品牌故事</a></li>
-        <li class='tab'><a href="#tabs1-three">顶级酒品</a></li>
-        <li class='tab'><a href="#tabs1-four">卷轴诞生</a></li>
+        <li class='tab'><a href="#tabs1-two">设计</a></li>
+        <li class='tab'><a href="#tabs1-three">美酒</a></li>
+        <li class='tab'><a href="#tabs1-four">文化</a></li>
     </ul>
     <div class="panel-container" style="z-index: 0; position: static">
         <div id="tabs1-one">
