--- a/newGuo/address.html
+++ b/newGuo/address.html
@@ -13,6 +13,7 @@
     <link href="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+<div class="bg-cover"></div>
 <!--head-->
 <div class="site-topbar">
     <div class="container">
